updated the scraper to grab assets more dynamically and intelligently, gitignore to ignore things and the config to work on my local machine

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
-## Node modules ##
-/node_modules/*
-
-## Production folders ##
-/production/*
-/websites/*
-/variations/*
-yarn.lock
-yarn-error.log
-locro.sublime-project
-locro.sublime-workspace
+.gitignore
+/__pycache__/*
+/code_template - BC/*
