--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
-	"client_directory": "C:\\Users\\Public\\",
+	"client_directory": "C:\\Users\\bcohen05\\Desktop\\Work (local)\\test\\",
 	"test_id": "TEST001",
-	"url": "https://www.example.com",
+	"url": "https://www.bathstore.com/",
 	"enviroment_template": "\\code_template-generic"
 }
+
