--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-	"client_directory": "C:\\Users\\bcohen05\\Desktop\\Work (local)\\test\\",
-	"test_id": "TEST001",
-	"url": "https://www.bathstore.com/",
-	"enviroment_template": "code_template-generic"
+	"client_directory": "C:\\Users\\bcohen05\\Desktop\\Work (local)\\Aspinal\\Campaigns\\",
+	"test_id": "T03b",
+	"url": "https://www.aspinaloflondon.com/",
+	"enviroment_template": "aspinal_code_template-promotion"
 }
 
